<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_white"
        android:alphabeticShortcut="R"
        android:id="@+id/menu_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"

        />
    <item android:title="@string/update_profile"
        android:id="@+id/Update_profile"
        />
    <item android:title="@string/update_email"
        android:id="@+id/Update_email"

        />

    <item android:title="@string/setting"
        android:id="@+id/setting"
        />
    <item android:title="@string/change_password"
        android:id="@+id/change_password"
        />

    <item android:title="@string/delete_profile"
        android:id="@+id/delete_profile"
        />
    <item android:title="@string/log_out"
        android:id="@+id/log_out"
        />




</menu>