<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".login">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
     android:background="#A1D2D8F4"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/library_management"
        android:adjustViewBounds="true"
        />

    <TextView
        android:text="@string/please_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="#9B9BED"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emaillogin"
            android:id="@+id/entermail"
            android:inputType="textWebEmailAddress"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/baseline_email_24"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:id="@+id/password"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/baseline_lock_24"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="#A15564B3"
        />



    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"

        />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>