<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#A1BCC4ED"
            >

            <RelativeLayout
                android:id="@+id/layout_head"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#5CC">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#5CC"
                    android:id="@+id/RL_imageView">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/imageView_profile_dp"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:clickable="true"
                            android:contentDescription="@string/userdisplaypicture"
                            android:background="@drawable/ic_profile"
                            android:scaleType="centerCrop"
                            android:focusable="true" />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/RL_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/ic_profile"
                        android:contentDescription="@string/name"
                        android:background="@drawable/ic_profile"/>

                    <TextView
                        android:id="@+id/textView_show_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/ic_profile"
                        android:layout_marginStart="50dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_name"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_name"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_email"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/divider_name">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/ic_email"
                        android:contentDescription="@string/email"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_email"/>

                    <TextView
                        android:id="@+id/textView_show_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/ic_email"
                        android:layout_marginStart="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider_email"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_email"
                    android:layout_margin="5dp"
                    android:background="@android:color/darker_gray"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_Register"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/divider_email">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:id="@+id/imagViewRegisterNumber"
                        android:contentDescription="@string/mobile"
                        android:background="@drawable/baseline_app_registration_24"/>

                    <TextView
                        android:id="@+id/textview_registerNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@id/imagViewRegisterNumber"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/loading" />
                </RelativeLayout>






                <View
                    android:id="@+id/RL_Registerview"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/RL_Register"
                    android:layout_margin="5dp"
                    android:background="@android:color/darker_gray"/>




<!--                meraj-->

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_borrowed"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/txt_borrowedbook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_book_borrowed"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    />


            </LinearLayout>




            <Button
                android:id="@+id/searchProfilebutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/search_book1"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"

                />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:text="@string/registered_user_since"/>


        </LinearLayout>

    </ScrollView>


